--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.12.3",
+    "draft-js": "^0.10.5",
+    "draft-js-image-plugin": "^2.0.6",
+    "draft-js-mention-plugin": "^3.1.3",
+    "draft-js-plugins-editor": "^2.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
