--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.12.3",
+    "connected-react-router": "^6.2.2",
     "draft-js": "^0.10.5",
     "draft-js-image-plugin": "^2.0.6",
     "draft-js-mention-plugin": "^3.1.3",
@@ -14,7 +15,6 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
