--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "antd": "^3.12.3",
+    "babel-plugin-import": "^1.11.0",
     "connected-react-router": "^6.2.2",
     "draft-js": "^0.10.5",
     "draft-js-image-plugin": "^2.0.6",
     "draft-js-mention-plugin": "^3.1.3",
     "draft-js-plugins-editor": "^2.1.1",
+    "less": "^3.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-loadable": "^5.5.0",
+    "react-loadable-visibility": "^2.5.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
@@ -20,10 +24,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +37,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "customize-cra": "^0.2.11",
+    "less-loader": "^4.1.0",
+    "react-app-rewired": "^2.0.3"
+  }
 }
