--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "less": "^3.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-lines-ellipsis": "^0.14.0",
     "react-loadable": "^5.5.0",
     "react-loadable-visibility": "^2.5.1",
     "react-redux": "^6.0.0",
