--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "draft-js-mention-plugin": "^3.1.3",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-single-line-plugin": "^2.0.2",
+    "jquery": "^3.3.1",
     "less": "^3.9.0",
+    "lodash": "^4.17.11",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-lines-ellipsis": "^0.14.0",
