--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vines",
+  "homepage": "https://lokixxvii.github.io/vinesdb",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -32,7 +33,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,6 +48,7 @@
   ],
   "devDependencies": {
     "customize-cra": "^0.2.11",
+    "gh-pages": "^2.0.1",
     "less-loader": "^4.1.0",
     "react-app-rewired": "^2.0.3"
   }
